[package]
name = "modbus_buffer"
version = "0.0.1"
edition = "2021"
authors = ["pythcoiner <pythcoiner@proton.me>"]
description = "Circular buffer implementation tailored for Modbus communication in no_std environments."
readme = "README.md"
license = "MIT"
repository = "https://github.com/pythcoiner/modbus_buffer"
documentation = "https://docs.rs/modbus_buffer"
keywords = ["modbus", "buffer", "no_std", "embedded"]
categories = ["embedded", "no-std"]



